# DMM

./: .gitignore  .gitreview  CMakeLists.txt  README  README.md  RELEASE.md
app_example/func-test/fork/: CMakeLists.txt  tcpclient.c  tcpserver.c
app_example/perf-test/: CMakeLists.txt  multi_tcp_common_Ser.c  multi_tcp_common_app_Cli.c  multi_tcp_epoll_app_Cli.c  multi_tcp_epoll_app_Ser.c  multi_tcp_no_epoll_Ser.c  multi_tcp_select_app_Ser.c
src/: CMakeLists.txt
src/adapt/: nstack_dmm_adpt.c  nstack_dmm_adpt.h  nstack_epoll_comm.c  nstack_rd_mng.c  nstack_rd_mng.h  nstack_share_res.c  nstack_share_res.h
src/framework/: CMakeLists.txt
src/framework/common/base/include/: common_pal_bitwide_adjust.h  nsfw_base_linux_api.h  nsfw_getopt.h
src/framework/common/base/liblinuxapi/: base_linux_api_declare.h  nsfw_base_linux_api.c  nsfw_getopt.c  nsfw_lock_file.c
src/framework/common/data_struct/: eprb_tree.c  list.c  pidinfo.c  sha256.c
src/framework/common/include/: compile_config.h  compiling_check.h  dmm_fs.h  ephlist.h  eprb_tree.h  list.h  pidinfo.h  sha256.h  types.h
src/framework/common/include/generic/: dmm_atomic.h  dmm_barrier.h  dmm_rwlock.h  (+1 more)
src/framework/common/mem_mgr/: nsfw_mem_api.c  nsfw_mem_construct.c  nsfw_mem_desc.c  nsfw_mem_stat.c  nsfw_res_mgr.c
src/framework/hal/: hal.c  hal.h
src/framework/include/: dmm_config.h  hal_api.h  nsfw_fd_timer_api.h  nsfw_init.h  nsfw_maintain_api.h  nsfw_mem_api.h  nsfw_mgr_com_api.h  nsfw_ps_api.h  nsfw_ps_mem_api.h  nsfw_recycle_api.h  nsfw_snapshot.h  nsfw_upgrade.h  nstack_log.h  nstack_rd_data.h  nstack_securec.h  nstack_trace.h
src/framework/init/: CMakeLists.txt  fw_init.c  fw_module.c  fw_module.h
src/framework/ipc/mgr_com/: mgr_com.c  mgr_com.h
src/framework/ipc/ps/: nsfw_fd_timer.c  nsfw_ps_mem_module.c  nsfw_ps_mem_module.h  nsfw_ps_module.c  nsfw_ps_module.h  nsfw_recycle_module.c  nsfw_recycle_module.h  nsfw_soft_param.c
src/framework/lib_common_mem/: common_api.c  common_buf.c  common_func.c
src/framework/log/: nsfw_set_log.c  nstack_log.c
src/framework/mem/: dmm_fshm.c  dmm_group.c  dmm_group.h  dmm_heap.c  dmm_huge.c  dmm_memory.c  dmm_memory.h  dmm_segment.c  dmm_segment.h  dmm_share.h
src/framework/snapshot/: fw_snapshot.c  fw_ss_tlv.h
src/framework/tracing/: nstack_trace.c
src/nSocket/: CMakeLists.txt
src/nSocket/include/: declare_syscalls.h  nstack_atomic.h  nstack_dmm_api.h  nstack_eventpoll.h  nstack_ip_addr.h  nstack_rd.h  nstack_rd_init.h  nstack_select.h  nstack_sockops.h  nstack_types.h  select_adapt.h
src/nSocket/kernel/: linux_kernel_module.c  linux_kernel_module.h  linux_kernel_socket.c  linux_kernel_socket.h
src/nSocket/nstack/: nstack.c  nstack.h  nstack_fd_mng.c  nstack_fd_mng.h  nstack_info_parse.c  nstack_info_parse.h  nstack_module.c  nstack_module.h  nstack_nsocket_construct.c  nstack_socket.c  nstack_socket.h
src/nSocket/nstack_rd/: nstack_rd.c  nstack_rd_init.c  nstack_rd_ip.c  nstack_rd_ip.h  nstack_rd_priv.h  nstack_rd_proto.c  nstack_rd_proto.h
stacks/lwip_stack/: CMakeLists.txt  release_tar.sh  run_stackx.txt
stacks/lwip_stack/app_conf/: module_config.json  rd_config.json
stacks/lwip_stack/doc/: README.md
stacks/lwip_stack/lwip_src/: CMakeLists.txt
stacks/lwip_stack/lwip_src/api/: spl_api.c  spl_api_msg.c  spl_netbuf.c  spl_netifapi.c  spl_sbr.c  spl_tcpip.c
stacks/lwip_stack/lwip_src/common/: rb_tree.c  rb_tree.h  spl_def.h  spl_opt.h  stackx_app_res.c  stackx_app_res.h  stackx_common.c  stackx_common.h  stackx_common_opt.h  stackx_debug.h  stackx_err.h  stackx_ip_addr.c  stackx_ip_addr.h  stackx_ip_tos.h  stackx_netbuf.h  stackx_pbuf.c  stackx_pbuf.h  stackx_pbuf_comm.h  stackx_spl_msg.h  stackx_spl_share.c  stackx_spl_share.h  stackx_tcp_opt.h  stackx_tx_box.c  stackx_tx_box.h  stackx_types.h  stackxopts.h
stacks/lwip_stack/lwip_src/core/: global_tick.c  spl_pbuf.c  spl_timers.c  unmatch_version.c
stacks/lwip_stack/lwip_src/instance/: spl_instance.c
stacks/lwip_stack/lwip_src/ip_module/: configuration_reader.c  container_ip.c  ip_module_api.c  network.c  trp_rb_tree.c
stacks/lwip_stack/lwip_src/netif/: ethernetif.c  sc_dpdk.c  spl_hal.c
stacks/lwip_stack/lwip_src/recycle/: stackx_recycle.c
stacks/lwip_stack/lwip_src/socket/: CMakeLists.txt  stackx_cfg.h  stackx_container_cfg.c  stackx_epoll_api.c  stackx_epoll_api.h  stackx_event.c  stackx_event.h  stackx_macro.h  stackx_msg_handler.c  stackx_msg_handler.h  stackx_prot_com.c  stackx_prot_com.h  stackx_protocol_api.c  stackx_res_mgr.c  stackx_res_mgr.h  stackx_socket.h  stackx_tcp.c  stackx_udp.c
stacks/lwip_stack/release/: send_alarm.sh  start_nstack.sh  stop_nstack.sh  uninstall.sh  upgrade_nstack.sh
stacks/lwip_stack/release/configure/: ip_data.json  nStackConfig.json  network_data_tonStack.json
stacks/lwip_stack/release/include/: nstack_custom_api.h
stacks/lwip_stack/release/lwip_helper_files/: download_lwip.sh
stacks/lwip_stack/release/script/: nstack_fun.sh  nstack_var.sh  run_nstack_main.sh  run_nstack_master.sh
stacks/lwip_stack/src/: CMakeLists.txt
stacks/lwip_stack/src/alarm/: CMakeLists.txt  alarm.c  alarm.h  alarm_api.h
stacks/lwip_stack/src/include/: nsfw_msg.h  nsfw_msg_api.h  nsfw_mt_config.h  nsfw_rti.h
stacks/lwip_stack/src/io_adpt/: CMakeLists.txt  dpdk.c
stacks/lwip_stack/src/maintain/: CMakeLists.txt  fw_mt_config.c  nsfw_msg.c  nsfw_rti.c
stacks/lwip_stack/src/nStackMain/: CMakeLists.txt  main.c
stacks/lwip_stack/src/sbr/: CMakeLists.txt  sbr_err.h  sbr_index_ring.c  sbr_index_ring.h  sbr_protocol_api.h  sbr_res_mgr.c  sbr_res_mgr.h  sbr_socket.c
stacks/lwip_stack/src/tools/: CMakeLists.txt  dump_tool.c  dump_tool.h
stacks/lwip_stack/tools/: CMakeLists.txt  nping.c  ntcpdump.c  tool_common.h
stacks/lwip_stack/vagrant/: Vagrantfile  build.sh  start_nstackMain.sh
stacks/rsocket/: CMakeLists.txt  rsocket.patch
stacks/rsocket/config/: module_config.json  rd_config.json
stacks/rsocket/doc/: README.md
stacks/rsocket/src/: rsocket_adpt.c  rsocket_adpt.h  rsocket_in.h  rsocket_rdma.h  rsocket_rs.c  rsocket_sapi.h
(+128 files in other folders)
